Bug 1642590 - part1 : run internal pause when unbind media from DOM tree. r=bryce

This patch will
- run internal pause when removing a media from a document, instead of running `pause()` method

The advantage of doing so is
- to follow the spec [1]. In step 3, it mentions we should run internal pause, not pause.

[1] https://html.spec.whatwg.org/#playing-the-media-resource:remove-an-element-from-a-document

Differential Revision: https://phabricator.services.mozilla.com/D79925